photo gallery updates

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -11,11 +11,11 @@
     <div class="mv4-ns mr4-ns relative">
       <div class="gallery" id="gallery">
         <div><img alt="Senior Fellow E. Richard Gold speaks about the social context of innovation." src="{{ '/assets/gallery/ 2016-11-19-091552-19405.jpg' | relative_url }}"/></div>
-        <div><img alt="CIGI President Rohinton Medhora on stage at Gateway House India." src="{{ '/assets/gallery/3W7A0257.JPG' | relative_url }}"/></div>
+        <div><img alt="Graduate students and CIGI experts gather at the ILRP Graduate Student Conference to discuss the history and practices of International Law in Canada." src="{{ '/assets/gallery/2016-08-15 - ILRP - Graduate Student Conference - 39.jpg' | relative_url }}"/></div>
         <div><img alt="CIGI President Rohinton Medhora at the Think 20 Summit in Berlin discussing the implications for global governance of Germany's G20 Presidency." src="{{ '/assets/gallery/380__1TK0083_ed_z.jpg' | relative_url }}"/></div>
         <div><img alt="Some 85 think tanks from 50 countries at the 2016 Global Think Tank Summit reflected on their role in responding to globalization and its discontents." src="{{ '/assets/gallery/2016-09-28 - Global Think Tank Summit - 92.jpg' | relative_url }}"/></div>
         <div><img alt="CIGI President Rohinton Medhora and Minister of Foreign Affairs Stéphane Dion at the 2016 Global Think Tank Summit." src="{{ '/assets/gallery/2016-09-28 - Global Think Tank Summit - 106.jpg' | relative_url }}"/></div>
-        <div><img alt="Panelists stress the need for think tanks to innovate at the 2016 Global Think Tank Summit in Montreal." src="{{ '/assets/gallery/2016-09-30 - Global Think Tank Summit - 17.jpg' | relative_url }}"/></div>
+        <div><img alt="Maatalii Okalik, president of the National Inuit Youth Council and Jennifer Spence, co-author of North of 60: Toward a Renewed Canadian Arctic Agenda." src="{{ '/assets/gallery/CIGI North of 60.jpg' | relative_url }}"/></div>
         <div><img alt="Deputy Governor of the Bank of Canada Timothy Lane speaks at CIGI about capital flows in the context of globalization." src="{{ '/assets/gallery/2016-11-16-Timothy Lane-20.jpg' | relative_url }}"/></div>
         <div><img alt="Lieutenant Governor of Ontario Elizabeth Dowdeswell addresses the Global Youth Forum." src="{{ '/assets/gallery/2016-11-25 Global Youth Forum - 2_050.jpg' | relative_url }}"/></div>
         <div><img alt="A local high school student participates in the Waterloo District School Board Model UN at the CIGI Campus." src="{{ '/assets/gallery/2017-03-24 - Model UN - 39.jpg' | relative_url }}"/></div>
@@ -23,9 +23,9 @@
         <div><img alt="Senior Fellow Jeff Rubin makes a case for divesting from fossil fuels in Canada during a public lecture in the CIGI Auditorium." src="{{ '/assets/gallery/2017-05-11-Speaker Series-Jeff Rubin-29.jpg' | relative_url }}"/></div>
         <div><img alt="Senior Fellow Bessma Momani speaks about the rise of ISIS, and how Western governments can address homegrown terrorism through community empowerment." src="{{ '/assets/gallery/Bessma Momani_015.jpg' | relative_url }}"/></div>
         <div><img alt="Senior Fellow Julie Maupin delivers a presentation on the rise of Bitcoin." src="{{ '/assets/gallery/CIGI Bitcoins_002.jpg' | relative_url }}"/></div>
-        <div><img alt="Bassem Awad, deputy director of international intellectual property law and innovation, at CIGI's Town Hall Forum on Innovation." src="{{ '/assets/gallery/CIGI Innovation meeting-54.jpg' | relative_url }}"/></div>
+        <div><img alt="Senior Fellow and co-chair of the Think Tank 20 (T20) task force on climate policy and finance, Celine Bak addresses the Think 20 Summit in Berlin." src="{{ '/assets/gallery/T20 - Celine Bak.jpg' | relative_url }}"/></div>
         <div><img alt="Lloyd Axworthy discusses the work of the World Refugee Council with Kofi Annan." src="{{ '/assets/gallery/CiGi_67I7832.JPG' | relative_url }}"/></div>
-        <div><img alt="Lloyd Axworthy introduces the World Refugee Council at a meeting of ambassadors in Ottawa." src="{{ '/assets/gallery/CiGi_67I7855.JPG' | relative_url }}"/></div>
+        <div><img alt="International Law Research Program Director Oonagh Fitzgerald speaks at the Innovation in Context Conference in Montreal." src="{{ '/assets/gallery/Innovation in Context - Oonagh.jpg' | relative_url }}"/></div>
         <div><img alt="'Reconciling Regulation and Growth' presentation at the 2016 Oliver Wyman Conference." src="{{ '/assets/gallery/IMG_2742.jpg' | relative_url }}"/></div>
         <div><img alt="Research Fellow Alex He speaks in Beijing at the launch of his book The Dragon's Footprints: China in the Global Economic Governance System under the G20 Framework." src="{{ '/assets/gallery/IMG_4019.JPG' | relative_url }}"/></div>
         <div><img alt="Former United States Ambassador to Finland Derek Shearer on stage at CIGI during his lecture on the potential impact of the 2016 US election." src="{{ '/assets/gallery/Shearer - CIGI_017.jpg' | relative_url }}"/></div>
