--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -9,38 +9,48 @@
                 <div class="tab" data-id="tab-1">
                     {% markdown template_content/slide2-president.md %}
                     <div class="col">
-                        <p>Trust is fundamental for a think tank. But as we know from following the accounts, and accusations, of “fake news” by political leaders and others, trust is difficult to build and maintain but easy to lose.</p>
-                        <p>When we embarked on rebranding CIGI in late 2016, we did so by focusing on our core competencies – research, expertise and analysis – with an eye toward presenting and communicating our work in new ways. </p>
-                        <p>CIGI’s new identity, launched with a new website, tells a story about who we are as an organization: an innovative global think tank that delivers influential research and trusted analysis. We underline, in contrast to “fake news,” the role of CIGI as a trustworthy source of information and insight.</p>
-                        <p>The success stories featured in this annual report, itself an example of the innovation we are cultivating at CIGI, collectively tell a story of the product of in-depth research, studied expertise and timely analysis: informed dialogue with decision makers and meaningful public discourse.</p>
-                        <p>Our World Refugee Council, led by former Canadian Foreign Minister Lloyd Axworthy, brings together the best and brightest refugee experts, former presidents and prime ministers, civil society leaders, a Nobel Peace Prize laureate and others to bring bold thinking and new research to this global problem.</p>
-
-                        <p>New books captured the preoccupations of our times. Look Who’s Watching: Surveillance, Treachery and Trust Online and Laid Low: Inside the Crisis that Overwhelmed Europe and IMF tell troubling tales and yet are nevertheless optimistic about the future.</p>
-                        <p>And at the Global Think Tank Summit CIGI hosted in September 2016 with the Think Tanks and Civil Societies Program at the Lauder Institute of the University of Pennsylvania, we pursued conversations focused on threats posed by populist movements to global institutions.</p>
-                        <p>Public uncertainty and distrust of our institutions has demonstrated the need to bring clarity and innovative thinking to global policy making. As a non-partisan, independent think tank, CIGI is positioned as a credible, trustworthy place to find answers.</p>
-                    <div class="sig-image"><img src="{{ "/assets/MedhoraSignature.png" | relative_url }}" alt="signature"></div>
-                    <p class="signature">Rohinton P. Medhora<br>
-                    President, CIGI</p>
+                        <p>Beginning in Bretton Woods in 1944, groups of powerful nations organized the economic and political arrangements that serve us, albeit imperfectly, to this day. But rapid developments in technologies are upending established structures in every part of the economy and society.</p>
+                        
+                        <p>Moreover, conversations defined by rising nationalism and populism on social media are daily challenging the institutions we follow closely. A stream of “fake news” contributes to rapidly growing distrust in established institutions while in parallel so-called legacy media is declining, particularly in North America and Europe.</p>
+                        
+                        <p>At the Global Think Tank Summit CIGI hosted in September 2016 with the Think Tanks and Civil Societies Program at the Lauder Institute of the University of Pennsylvania, these topics were at the fore of our conversations. I spoke to the need for think tanks to be nimble and to respond quickly with our knowledge in a fast-changing digital environment.</p>
+                        
+                        <p>And CIGI has responded quickly. We have fundamentally shifted the way we present and communicate our core competencies – research, expertise and analysis. CIGI’s new identity, launched with a new website, demonstrates much about who we have become as an organization: an innovative global think tank that delivers influential research and trusted analysis.</p>
+                        
+                        <p>An example of this is CIGI’s “New Thinking on Innovation” series, a collection of timely essays published exclusively online in the spring of 2017. These essays breathed new life into discussions around strategies to drive innovation and prosperity that will continue to influence policy in Canada and elsewhere.</p>
+                        
+                        <p>In the series, corporate leaders, economists and trade and international law experts brought perspective and specific policy recommendations for international trade agreements, patent systems and intellectual property strategies, and the role global institutions like the Group of Twenty (G20) can play in supporting innovation in smaller countries.</p> 
+                        
+                        <p>The success stories featured in our first-ever digital annual report, itself an example of the innovation we are cultivating at CIGI, collectively tell a story of the product of in-depth research, studied expertise and timely analysis: informed dialogue with decision makers and meaningful public discourse.</p>
+                        
+                        <p>Whether through participating in the G20 or other major fora, CIGI will continue to work through forward-looking, evidence-based deliberation to reach a new Bretton Woods moment for our times. We take seriously the “innovation” and “governance” in our name, which will help get us there.</p>
+                        <div class="sig-image"><img src="{{ "/assets/MedhoraSignature.png" | relative_url }}" alt="signature"></div>
+                        <p class="signature">Rohinton P. Medhora<br>
+                            President, CIGI</p>
+                        </div>
                     </div>
-                </div>
-                <div class="tab" data-id="tab-2" data-name="chairs-message">
-                    {% markdown template_content/slide2-chair.md %}
-                    <div class="col">
-                        <p>The global economy is increasingly shifting from the delivery of goods and services to an international commerce in ideas and yet policies and incentives have not always kept up with the transition. A new approach to stimulating innovation in Canada and abroad is necessary.</p>
-                        <p>Over the past year, CIGI has put a spotlight on this issue, tackling questions around innovation policies and strategies with expertise, analysis and research. CIGI’s “New Thinking on Innovation” series, launched in the spring, breathed new life into discussions and will continue to influence policy in Ottawa and elsewhere.</p>
-                        <p>In the series, corporate leaders, economists and trade and international law experts brought perspective and specific policy recommendations for international trade deals, patent systems and intellectual property strategies, and the role global institutions like the Group of Twenty can play in supporting innovation among smaller countries.</p>
-                        <p>Among others, we heard from business leaders like Neil Desai and Benjamin Bergen as well as legal experts Michael Geist and new CIGI Senior Fellow E. Richard Gold. In a November 2016 event and through a series of resulting video interviews, Gold also looked beyond technology to the main driver of innovation: people and the societal contexts that foster their successful innovations.</p>
-                        <p>CIGI’s responses to constantly evolving issues like innovation represent an organizational approach that builds on research but looks for practical and timely results. Two examples are revealing. Through a partnership with York University, ILRP is working with the IP Osgoode Innovation Clinic to give new entrepreneurs and innovators access to free legal clinics to help them navigate complex, and costly, intellectual property systems.</p>
-
-                        <p>In the policy arena, CIGI responded quickly to the announcement of NAFTA renegotiations by publishing a series of original pieces on NAFTA and the Knowledge Economy. CIGI experts simultaneously participated in discussions with Canadian government officials looking for a road map on trade, innovation and intellectual property under a NAFTA 2.0.</p>
-                        <p>Independent, peer-reviewed research accompanied by timely and in-depth analysis, multimedia interviews and explanatory pieces demonstrate CIGI’s commitment to meeting the needs of today’s decision makers while also reaching new audiences.</p>
-                        <p>The continued support of our many global and local partners – and especially from the Governments of Canada and Ontario, and the City of Waterloo – is paramount to ensuring CIGI’s ongoing success as a relevant and innovative Canadian think tank with a global perspective.</p>
-                        <div class="sig-image"><img src="{{ "/assets/BalsillieSignature.png" | relative_url }}" alt="signature"></div>
-                        <p class="signature">Jim Balsillie<br>
-                        Chair, CIGI Board of Directors</p>
+                    <div class="tab" data-id="tab-2" data-name="chairs-message">
+                        {% markdown template_content/slide2-chair.md %}
+                        <div class="col">
+                            <p>Our globalized economy has seen, in a very short amount of time, a fundamental shift away from the delivery of goods and services to an international commerce based on ideas. Changing intellectual property regimes, new trade agreements and rapidly evolving technologies demand up-to-date responses from researchers and thought leaders.</p>
+                            
+                            <p>CIGI has responded with a new organizational approach to these changing issues. A new website serves as a digital platform to combine research and expertise to deliver journalistic analysis. It is an approach that builds on CIGI’s already solid research programs to deliver trustworthy and timely content that stands out amidst a noisy field of information providers with little quality control.</p>
+                            
+                            <p>Already CIGI has delivered a wealth of original research accompanied by timely and in-depth analysis, multimedia interviews and explanatory pieces. From NAFTA to innovation, this digital-first content demonstrates CIGI’s commitment to meeting the needs of today’s decision makers while reaching new audiences.</p>
+                            
+                            <p>In the policy arena, CIGI responded quickly to the announcement of NAFTA renegotiations by publishing a series of original pieces and interviews on NAFTA and the Knowledge Economy. CIGI experts simultaneously participated in discussions with Canadian government officials looking for a road map on trade, innovation and intellectual property under a NAFTA 2.0.</p>
+                            
+                            <p>CIGI has also led conversations around a new approach to stimulating innovation, much needed to drive economic development and prosperity at a time when policies and incentives have not always kept up with our changing economy. Kicked off through the “New Thinking on Innovation” series, CIGI’s has also looked to the main drivers of innovation: people and the societal contexts that foster their successful innovations.</p>
+                            
+                            <p>The innovation lens also extends to global governance questions. CIGI’s World Refugee Council, led by former Canadian Foreign Minister Lloyd Axworthy, brings together the best and brightest refugee experts, former presidents and prime ministers, civil society leaders, a Nobel Peace Prize laureate and others to bring bold thinking and innovative approaches to this global problem.</p> 
+                            
+                            <p>Our many global and local partners can be proud of CIGI’s new approach this year. It would not have been possible without their support – especially from the Governments of Canada and Ontario, and the City of Waterloo – to help make CIGI a relevant, trusted and innovative Canadian think tank with a global perspective.</p>
+                            <div class="sig-image"><img src="{{ "/assets/BalsillieSignature.png" | relative_url }}" alt="signature"></div>
+                            <p class="signature">Jim Balsillie<br>
+                                Chair, CIGI Board of Directors</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
+        </section>
