--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -47,7 +47,7 @@
   </div>
 
   <div class="wrapper dn-ns w-90 mobile-timeline">
-    <p>Explore CIGI cannot be displayed on your mobile device. For the best experience, please view on a desktop browser. For the best experience, please view on a desktop browser.</p>
+    <p>Explore CIGI cannot be displayed on your mobile device. For the best experience, please view on a desktop browser.</p>
     <hr>
     <p class="tc"><a href="www.cigionline.org/ar">View 2017 Annual Report</a></p>
   </div>
