--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -11,8 +11,8 @@
     <div class="mv4-ns mr4-ns relative">
       <div class="gallery" id="gallery">
         <div><img alt="Senior Fellow E. Richard Gold speaks about the social context of innovation." src="{{ '/assets/gallery/ 2016-11-19-091552-19405.jpg' | relative_url }}"/></div>
+        <div><img alt="CIGI President Rohinton Medhora on stage at Gateway House India." src="{{ '/assets/gallery/3W7A0257 09-51-16-089.JPG' | relative_url }}"/></div>
         <div><img alt="Graduate students and CIGI experts gather at the ILRP Graduate Student Conference to discuss the history and practices of International Law in Canada." src="{{ '/assets/gallery/2016-08-15 - ILRP - Graduate Student Conference - 39.jpg' | relative_url }}"/></div>
-        <div><img alt="CIGI President Rohinton Medhora at the Think 20 Summit in Berlin discussing the implications for global governance of Germany's G20 Presidency." src="{{ '/assets/gallery/380__1TK0083_ed_z.jpg' | relative_url }}"/></div>
         <div><img alt="Some 85 think tanks from 50 countries at the 2016 Global Think Tank Summit reflected on their role in responding to globalization and its discontents." src="{{ '/assets/gallery/2016-09-28 - Global Think Tank Summit - 92.jpg' | relative_url }}"/></div>
         <div><img alt="CIGI President Rohinton Medhora and Minister of Foreign Affairs Stéphane Dion at the 2016 Global Think Tank Summit." src="{{ '/assets/gallery/2016-09-28 - Global Think Tank Summit - 106.jpg' | relative_url }}"/></div>
         <div><img alt="Maatalii Okalik, president of the National Inuit Youth Council and Jennifer Spence, co-author of North of 60: Toward a Renewed Canadian Arctic Agenda." src="{{ '/assets/gallery/CIGI North of 60.jpg' | relative_url }}"/></div>
