minor content updates

--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -21,7 +21,7 @@
                         
                         <p>In the series, corporate leaders, economists and trade and international law experts brought perspective and specific policy recommendations for international trade agreements, patent systems and intellectual property strategies, and the role global institutions like the Group of Twenty (G20) can play in supporting innovation in smaller countries.</p> 
                         
-                        <p>The success stories featured in our first-ever digital annual report, itself an example of the innovation we are cultivating at CIGI, collectively tell a story of the product of in-depth research, studied expertise and timely analysis: informed dialogue with decision makers and meaningful public discourse.</p>
+                        <p>The success stories featured in our first-ever digital annual report, itself an example of the innovation we are cultivating at CIGI, collectively tell a story that is the product of in-depth research, studied expertise and timely analysis: informed dialogue with decision makers and meaningful public discourse.</p>
                         
                         <p>Whether through participating in the G20 or other major fora, CIGI will continue to work through forward-looking, evidence-based deliberation to reach a new Bretton Woods moment for our times. We take seriously the “innovation” and “governance” in our name, which will help get us there.</p>
                         <div class="sig-image"><img src="{{ "/assets/MedhoraSignature.png" | relative_url }}" alt="signature"></div>
@@ -32,7 +32,7 @@
                     <div class="tab" data-id="tab-2" data-name="chairs-message">
                         {% markdown template_content/slide2-chair.md %}
                         <div class="col">
-                            <p>Our globalized economy has seen, in a very short amount of time, a fundamental shift away from the delivery of goods and services to an international commerce based on ideas. Changing intellectual property regimes, new trade agreements and rapidly evolving technologies demand up-to-date responses from researchers and thought leaders.</p>
+                            <p>Our globalized economy has seen, in a very short amount of time, a fundamental shift away from the delivery of goods and services to international commerce based on ideas. Changing intellectual property regimes, new trade agreements and rapidly evolving technologies demand up-to-date responses from researchers and thought leaders.</p>
                             
                             <p>CIGI has responded with a new organizational approach to these changing issues. A new website serves as a digital platform to combine research and expertise to deliver journalistic analysis. It is an approach that builds on CIGI’s already solid research programs to deliver trustworthy and timely content that stands out amidst a noisy field of information providers with little quality control.</p>
                             
