Add a polyfill for object fit for ie/edge

--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -154,9 +154,9 @@
 
   .img-container {
     img {
+      @include object-fit(cover);
       height: 100vh;
       left: 0;
-      object-fit: cover;
       position: absolute;
       top: 0;
       width: 100vw;
