doing some changes

--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -7,20 +7,57 @@
   width: 50px;
 }
 
-@media (max-width: $small-phone - 0.01em), (max-height: 768px) {
+@media (max-width: $small-phone - 0.01em), (max-height: $small-phone - 0.01em) {
   section {
     background: $background-color;
     border-bottom: solid 1px $grey-color-dark;
   }
+  
+  // special mobile landscape overwrites
+  a.db-ns{
+      display:none;
+    }
+  
+  .mv4-ns{
+    margin: 0;
+  }
 
+  .dn-ns{
+    display: initial;
+  }
+
+  a.dn-ns{
+    display: block;
+  }
+
+  .vh-100-ns{
+    height: auto;
+  }
+  .site-header.wrapper{
+    max-width: 100%;
+  }
+
+  .site-header{
+    padding: 0.5em;
+  }
+
+  .mobile-timeline{
+    p {
+      width: 70%;
+      margin:auto;
+      padding-top: 2em;
+    }
+  }
+
+  .cigi-logo-mobile{
+    left:0px;
+  }
+  // *******  
+  
   #main-tabs {
     display: none;
   }
-
-  .cigi-logo-mobile {
-    display: inline-block !important;
-  }
-
+  
   .mobile-timeline{
     padding-top: 6em;
     p {
@@ -34,24 +71,24 @@
       text-decoration: none;
     }
   }
-
+  
   .site-header {
     background: $background-color;
     box-shadow: 0 0 1rem 1px $grey-25;
   }
-
+  
   .sidebar,
   .navigation-top-button,
   .navigation-bottom-button {
     display: none;
   }
-
+  
   .download {
     a {
       margin-top: 0;
     }
   }
-
+  
   .toc-mobile-wrapper {
     background: black;
     color: white;
@@ -61,45 +98,45 @@
     position: fixed;
     top: 0;
     width: 100vw;
-
+    
     a {
       color: white;
       text-decoration: none;
     }
-
+    
     ul {
       font-size: 1em;
       list-style: none;
       padding: 4em 1em 0;
-
+      
       li:first-child {
         display: none;
       }
-
+      
     }
   }
-
+  
   #timeline-slide-content,
   #timeline-filters {
     display: none;
   }
-
+  
   h1 {
     font-size: 2em !important;
     line-height: 1.25em !important;
   }
-
+  
   .landing,
   .timeline-slide {
     min-height: 100vh;
   }
-
+  
   .timeline-slide,
   .financials,
   .standard-slide {
     padding-top: 2rem;
   }
-
+  
   .mobile-button {
     background: $accent-color;
     border-radius: 50%;
@@ -112,23 +149,23 @@
     right: 20px;
     z-index: 100;
   }
-
+  
   .explore,
   .fullscreen-bg-video {
     display: none;
   }
-
+  
   .img-container {
     img {
       padding-bottom: 0.5rem;
     }
   }
-
+  
   .photo-caption {
     margin: 0;
     order: 0;
     padding-bottom: 0.5rem;
-
+    
     &::before {
       display: none;
     }
@@ -139,13 +176,13 @@
   }
 }
 
-@media (min-width: $small-phone), (min-height: 769px) {
+@media (min-width: $small-phone) and (min-height: $small-phone) {
   .cigi-logo-mobile,
   .toc-close-mobile,
   .toc-open-mobile {
     display: none;
   }
-
+  
   .slide-3,
   .slide-10,
   .slide-11,
@@ -155,7 +192,7 @@
       display: none;
     }
   }
-
+  
   .img-container {
     img {
       height: 100vh;
@@ -178,7 +215,7 @@
       z-index: 1;
     }
   }
-
+  
   .slide-content > :not(.img-container) {
     position: relative;
     z-index: 2;
