--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -6,8 +6,14 @@ $on-laptop: 880px;
 $small-screen: 1390px;
 
 @mixin media-query($device) {
-  @media screen and (max-width: $device) {
-    @content;
+  @if $device != $small-phone{
+    @media screen and (max-width: $device) {
+      @content;
+    }
+  } @else {
+    @media screen and (max-width: $device), screen and (max-height: $device) {
+      @content;
+    }
   }
 }
 
@@ -92,7 +98,7 @@ body {
 
 %click-through-to-children {
   pointer-events: none;
-
+  
   * {
     pointer-events: auto;
   }
@@ -105,7 +111,7 @@ header {
 h1 {
   font-size: 1.75rem;
   font-weight: 300;
-
+  
   @include media-query($on-palm) {
     font-size: 1.25rem;
   }
@@ -133,7 +139,7 @@ hr {
   max-width: 70rem;
   padding-left: $spacing-unit;
   padding-right: $spacing-unit;
-
+  
   @include media-query($on-laptop) {
     max-width: calc(#{$content-width} - (#{$spacing-unit}));
     padding: 0;
@@ -149,7 +155,7 @@ hr {
   position: fixed;
   transform: translateX(-50%);
   transition: transform 1s ease;
-
+  
   &.top {
     transform: translate(-50%, -100%);
   }
@@ -196,11 +202,11 @@ hr {
 %reverse-dim {
   opacity: 0.5;
   transition: opacity 0.15s ease-in;
-
+  
   &:hover {
     opacity: 1;
   }
-
+  
   &:active {
     opacity: 0.8;
     transition: opacity 0.15s ease-out;
@@ -228,19 +234,19 @@ hr {
   -webkit-column-count: 2;
   -moz-column-count: 2;
   column-count: 2;
-
+  
   -webkit-column-width: 50%;
   -moz-column-width: 50%;
   column-width: 450px;
-
+  
   break-inside: avoid;
   page-break-inside: avoid;
-
+  
   @include media-query($small-phone){
     -webkit-column-width: 100%;
     -moz-column-width: 100%;
     column-width: 100%;
-
+    
     -webkit-column-count: 1;
     -moz-column-count: 2;
     column-count: 1;
