--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,16 +1,13 @@
-<section class="vh-100-ns default-background relative">
-  <div class="wrapper vh-100-ns flex flex-column relative">
-    <main class="w-100 mt6-ns mt4 flex justify-between items-center" aria-label="CIGI">
-      <h1>
-        Photo Gallery
-      </h1>
-    </main>
-    <p>
-      Lorem ipsum dolor sit amet
-    </p>
+<section class="vh-100-ns gallery-slide default-background">
+  <div class="wrapper h-100">
+      <h1>Photo Gallery</h1>
+
     <div class="mv4-ns mr4-ns relative">
       <div class="gallery" id="gallery">
-        <div><img alt="Senior Fellow E. Richard Gold speaks about the social context of innovation." src="{{ '/assets/gallery/ 2016-11-19-091552-19405.jpg' | relative_url }}"/></div>
+        <div>
+            <img class="preview" alt="Senior Fellow E. Richard Gold speaks about the social context of innovation." src="{{ '/assets/gallery/preview/pre-2016-11-19-091552-19405.jpg' | relative_url }}"/>
+            <img class="full" alt="Senior Fellow E. Richard Gold speaks about the social context of innovation." src="{{ '/assets/gallery/ 2016-11-19-091552-19405.jpg' | relative_url }}"/>
+        </div>
         <div><img alt="CIGI President Rohinton Medhora on stage at Gateway House India." src="{{ '/assets/gallery/3W7A0257 09-51-16-089.JPG' | relative_url }}"/></div>
         <div><img alt="Graduate students and CIGI experts gather at the ILRP Graduate Student Conference to discuss the history and practices of International Law in Canada." src="{{ '/assets/gallery/2016-08-15 - ILRP - Graduate Student Conference - 39.jpg' | relative_url }}"/></div>
         <div><img alt="Some 85 think tanks from 50 countries at the 2016 Global Think Tank Summit reflected on their role in responding to globalization and its discontents." src="{{ '/assets/gallery/2016-09-28 - Global Think Tank Summit - 92.jpg' | relative_url }}"/></div>
