--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -1,45 +1,37 @@
-$gallery-columns: 5;
-$gallery-rows: 4;
-$gallery-grid-gap: 0.375rem;
-$gallery-height: 50vh;
-$gallery-image-aspect-ratio: 3/2;
-
 .gallery {
   display: grid;
-
-  @include media-query($small-phone) {
-    display: block;
-  }
-
-  grid-gap: $gallery-grid-gap;
-  grid-template-columns: repeat($gallery-columns, 1fr);
-  grid-template-rows: repeat($gallery-rows, 1fr);
-  height: $gallery-height;
+  height: 70vh;
+  grid-gap: 0.375rem;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   max-width: 100%;
   user-select: none;
-  width: calc((#{$gallery-height} - #{$gallery-rows - 1} * #{$gallery-grid-gap}) * #{$gallery-columns} / #{$gallery-rows} * #{$gallery-image-aspect-ratio} + #{$gallery-columns - 1} * #{$gallery-grid-gap});
-
-  img {
+  
+  img.preview {
     cursor: pointer;
     height: 100%;
     object-fit: cover;
     object-position: center center;
-    transform: scale(1, 1);
     transition: transform 200ms;
     width: 100%;
+    &:hover{
+      transform: scale(1.1, 1.1);
+    }
   }
-
-  img:hover {
-    transform: scale(1.1, 1.1);
+  img.full{
+    display: none;
   }
 
   > div {
     line-height: 0;
     overflow: hidden;
-    @include media-query($small-phone) {
-      margin-bottom: 0.5rem;
-    }
   }
+
+  @include media-query($small-phone) {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+  }
+
 }
 
 .lightbox {
@@ -62,7 +54,7 @@ $gallery-image-aspect-ratio: 3/2;
 
 .media-container {
   left: 50%;
-  max-width: calc(100% - 2rem);
+  max-width: calc(100% - 4rem);
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
