making updates to financials

--- a/_includes/slide16-sheet1.html
+++ b/_includes/slide16-sheet1.html
@@ -1,9 +1,9 @@
 <table class="balance-sheet table1">
     <thead>
         <tr class="title">
-            <td>Summarized Balance Sheet</td>
-            <td>July 31, 2017 Total</td>
-            <td>July 31, 2016 Total</td>
+            <td>Summarized Balance Sheet as at July 31, 2017</td>
+            <td>2017 Total</td>
+            <td>2016 Total</td>
         </tr>                        
     </thead>
     <tbody>
@@ -38,7 +38,7 @@
         <tr class="total">
             <td></td>
             <td class="single">$132,201,287</td>
-            <td class="single">$141,397,067</td>
+            <td class="single">$141,180,252</td>
         </tr>
         <tr class="section">
             <td>Other Assets</td>
@@ -50,15 +50,10 @@
             <td>59,479,918</td>
             <td>61,831,500</td>
         </tr>
-        <tr class="total">
-            <td></td>
-            <td class="single">191,681,205</td>
-            <td class="single">203,011,752</td>
-        </tr>
         <tr class="section total">
             <td>Total Assets</td>
-            <td class="double">$191,681,205</td>
-            <td class="double">$203,011,752</td>
+            <td class="top double">$191,681,205</td>
+            <td class="top double">$203,011,752</td>
         </tr>
         <tr class="section">
             <td>Current Liabilities</td>
@@ -66,9 +61,14 @@
             <td></td>
         </tr>
         <tr>
+            <td>Bank Indebtness</td>
+            <td>$0</td>
+            <td>$132,070</td>
+        </tr>
+        <tr>
             <td>Accounts Payable and Accrued Liabilities</td>
-            <td>$1,160,906</td>
-            <td>$1,693,622</td>
+            <td>1,160,906</td>
+            <td>1,693,622</td>
         </tr>
         <tr>
             <td>Deferred Revenue</td>
