--- a/_includes/slide16-sheet2.html
+++ b/_includes/slide16-sheet2.html
@@ -1,9 +1,9 @@
 <table class="balance-sheet table2">
     <thead> 
         <tr class="title">
-            <td>Summarized Statement of Revenue, Expenses and Changes in Fund Balances</td>
-            <td>July 31, 2017 Total</td>
-            <td>July 31, 2016 Total</td>
+            <td>Summarized Statement of Revenue, Expenses and Changes in Fund Balances for the year ended July 31, 2017</td>
+            <td>2017 Total</td>
+            <td>2016 Total</td>
         </tr>                        
     </thead>
 <tbody>
@@ -14,18 +14,18 @@
     </tr>
     <tr>
         <td>Realized Inventment Income</td>
-        <td>$9,337,640</td>
-        <td>$4,640,288</td>
+        <td>$9,337,640&nbsp;</td>
+        <td>$4,640,288&nbsp;</td>
     </tr>
     <tr>
         <td>Grants (Government and Other)</td>
-        <td>3,525,400</td>
-        <td>3,772,027</td>
+        <td>3,525,400&nbsp;</td>
+        <td>3,772,027&nbsp;</td>
     </tr>
     <tr>
         <td>Donations and other Revenue</td>
-        <td>1,319,422</td>
-        <td>1,261,777</td>
+        <td>1,319,422&nbsp;</td>
+        <td>1,261,777&nbsp;</td>
     </tr>
     <tr>
         <td>Unrealized Investment Income (Loss)</td>
@@ -34,8 +34,8 @@
     </tr>
     <tr class="total">
         <td></td>
-        <td class="single">$12,165,671</td>
-        <td class="single">$8,294,530</td>
+        <td class="single">$12,165,671&nbsp;</td>
+        <td class="single">$8,294,530&nbsp;</td>
     </tr>
     <tr class="section">
         <td>Expenses</td>
@@ -44,33 +44,33 @@
     </tr>
     <tr>
         <td>Research, Conferences & Partnerships</td>
-        <td>$15,931,107</td>
-        <td>$14,542,584</td>
+        <td>$15,931,107&nbsp;</td>
+        <td>$14,542,584&nbsp;</td>
     </tr>
     <tr>
         <td>Amortization</td>
-        <td>2,713,660</td>
-        <td>3,448,421</td>
+        <td>2,713,660&nbsp;</td>
+        <td>3,448,421&nbsp;</td>
     </tr>
     <tr>
         <td>Administrative</td>
-        <td>1,973,594</td>
-        <td>2,049,629</td>
+        <td>1,973,594&nbsp;</td>
+        <td>2,049,629&nbsp;</td>
     </tr>
     <tr>
         <td>Facilities</td>
-        <td>1,179,226</td>
-        <td>1,049,197</td>
+        <td>1,179,226&nbsp;</td>
+        <td>1,049,197&nbsp;</td>
     </tr>
     <tr>
         <td>Technical Support</td>
-        <td>781,789</td>
-        <td>954,029</td>
+        <td>781,789&nbsp;</td>
+        <td>954,029&nbsp;</td>
     </tr>
     <tr class="total">
         <td></td>
-        <td class="single">$22,579,376</td>
-        <td class="single">$22,043,860</td>
+        <td class="single">$22,579,376&nbsp;</td>
+        <td class="single">$22,043,860&nbsp;</td>
     </tr>
     <tr>
         <td>Excess of Expenses over Revenue</td>
@@ -79,13 +79,13 @@
     </tr>
     <tr class="total section">
         <td>Fund Balances, Beginning of the Year</td>
-        <td class="top">$200,645,859</td>
-        <td class="top">$214,395,189</td>
+        <td class="top">$200,645,859&nbsp;</td>
+        <td class="top">$214,395,189&nbsp;</td>
     </tr>
     <tr class="section total">
         <td>Fund Balances, End of the Year</td>
-        <td class="top double">$190,232,154</td>
-        <td class="top double">$200,645,859</td>
+        <td class="top double">$190,232,154&nbsp;</td>
+        <td class="top double">$200,645,859&nbsp;</td>
     </tr>
 </tbody>
 </table>
