it likes lower case jpgs

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -27,7 +27,7 @@
         <div><img alt="Lloyd Axworthy discusses the work of the World Refugee Council with Kofi Annan." src="{{ '/assets/gallery/CiGi_67I7832.JPG' | relative_url }}"/></div>
         <div><img alt="International Law Research Program Director Oonagh Fitzgerald speaks at the Innovation in Context Conference in Montreal." src="{{ '/assets/gallery/Innovation in Context - Oonagh.jpg' | relative_url }}"/></div>
         <div><img alt="'Reconciling Regulation and Growth' presentation at the 2016 Oliver Wyman Conference." src="{{ '/assets/gallery/IMG_2742.jpg' | relative_url }}"/></div>
-        <div><img alt="Research Fellow Alex He speaks in Beijing at the launch of his book The Dragon's Footprints: China in the Global Economic Governance System under the G20 Framework." src="{{ '/assets/gallery/IMG_4019-square.JPG' | relative_url }}"/></div>
+        <div><img alt="Research Fellow Alex He speaks in Beijing at the launch of his book The Dragon's Footprints: China in the Global Economic Governance System under the G20 Framework." src="{{ '/assets/gallery/IMG_4019-square.jpg' | relative_url }}"/></div>
         <div><img alt="Former United States Ambassador to Finland Derek Shearer on stage at CIGI during his lecture on the potential impact of the 2016 US election." src="{{ '/assets/gallery/Shearer - CIGI_017.jpg' | relative_url }}"/></div>
         <div><img alt="Paul Heinbecker, Hina Jilani, Jakaya Kikwete, Rita Süssmuth and Lloyd Axworthy at the first meeting of the World Refugee Council in Geneva, Switzerland." src="{{ '/assets/gallery/WRC-Council-Leadership 1.jpg' | relative_url }}"/></div>
       </div>
