--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -20,9 +20,9 @@ $gallery-image-aspect-ratio: 3/2;
   }
 
   img {
-    @include object-fit(cover);
     cursor: pointer;
     height: 100%;
+    object-fit: cover;
     object-position: center center;
     transform: scale(1, 1);
     transition: transform 200ms;
@@ -82,9 +82,9 @@ $gallery-image-aspect-ratio: 3/2;
 }
 
 .photo {
-  @include object-fit(contain);
   max-height: 75vh;
   max-width: 75vw;
+  object-fit: contain;
 }
 
 .close-button {
