--- a/_includes/slide16-auditor.html
+++ b/_includes/slide16-auditor.html
@@ -5,7 +5,7 @@ To the Directors of The Centre for International Governance Innovation,</p>
 Management is responsible for the preparation of a summary of the financial statements in accordance with Canadian accounting standards for not-for-profit organizations.</p>
 <p><strong>Auditors’ Responsibility</strong><br/>
 Our responsibility is to express an opinion on the summary financial statements based on our procedures, which were conducted in accordance with Canadian Auditing Standard 810, “Engagements to Report on Summary Financial Statements”.</p>
-<p><strong>Opinion</strong></p>
-<p>In our opinion, the summary financial statements derived from the financial statements of the Organization as at, and for the year ended, July 31, 2017 are a fair summary of those financial statements, in accordance with Canadian accounting standards for not-for-profit organizations.</p>
+<p><strong>Opinion</strong><br/>
+In our opinion, the summary financial statements derived from the financial statements of the Organization as at, and for the year ended, July 31, 2017 are a fair summary of those financial statements, in accordance with Canadian accounting standards for not-for-profit organizations.</p>
 <div><img src="{{ "/assets/auditors-sig.png" | relative_url }}" alt="Zeifmans LLP"></div>   
 <p>Chartered Accountants<br>Licensed Public Accountants<br>Toronto, Ontario</p>
