--- a/_includes/slide3.html
+++ b/_includes/slide3.html
@@ -1,7 +1,21 @@
 <section class="vh-100-ns standard-slide slide-3">
+
+  <div class="img-container">
+    <img class="progressive" src="assets/slides/AR_InnovationSeries_mobile.jpg" alt="">
+  </div>
+
   <div class="wrapper h-100 flex items-end">
     <div class="slide-content pb4-ns pb6-ns pr6-ns z-1 flex flex-column">
-      {% markdown template_content/slide3-innovation.md %}
+      
+      <h3>Analysis</h3>
+      <h1>New Thinking on Innovation</h1>
+
+      <p>Innovation is at the heart of the knowledge economy and an engine of prosperity. Yet in Canada, productivity has been stubbornly flat for the past 30 years — leading to a preoccupation with policies that stimulate innovation.</p>
+          
+      <p>CIGI responded in the spring of 2017 by bringing together top scholars and practitioners to offer fresh perspectives and policy approaches for Canada and for the global economic cooperation system. The resulting series of 18 online essays, New Thinking on Innovation, addressed a wide range of topics, from the role of international trade in stimulating innovation to the impact of intellectual property strategies on competitiveness.</p>
+          <p>The exclusively online series, a first for CIGI, ushered in a new school of thought on innovation policy and was accompanied by video interviews and animation. Its creative delivery and stellar lineup of authors generated over 78,000 views and sparked online engagement from television personalities, entrepreneurial networks and government officials.
+          </p>
+
       <div class="view-article pb2 pt2">
           <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the New Thinking on Innovation essays.</a>
       </div>
