--- a/_assets/css/custom/timeline.scss
+++ b/_assets/css/custom/timeline.scss
@@ -1,6 +1,6 @@
 //Timeline variables
-$timeline-foreground-color: rgba(0, 0, 0, 0.25);
-$timeline-foreground-color-transparent: rgba(0, 0, 0, 0);
+$timeline-foreground-color: #3d3d3d;
+$timeline-foreground-color-transparent: rgba(61, 61, 61, 0);
 $timeline-vertical-line-length: 8rem;
 $timeline-vertical-line-duration: 500ms;
 
