--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -142,6 +142,7 @@ header .tabs {
   margin-left: -0.3em;
   margin-top: 1em;
   order: 1;
+  padding: 0.5em;
   transition: color 0.5s ease-in, background-color 0.5s ease-in;
 
   &::before {
@@ -163,6 +164,10 @@ header .tabs {
     transition: color 0.5s ease-out, background-color 0.5s ease-out;
 
     p::before {
+      color: $grey-color;
+      transition: color 0.5s ease-out;
+    }
+    &:before {
       color: $grey-color;
       transition: color 0.5s ease-out;
     }
