--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -6,7 +6,7 @@
                 <div class="tab toggle" data-id="tab-2">Chair's Message</div>
             </div>
             <div class="tab-content">
-                <div class="tab" data-id="tab-1">
+                <div class="tab" id="president-message" data-id="tab-1">
                     {% markdown template_content/slide2-president.md %}
                     <div class="col">
                         <p>Beginning in Bretton Woods in 1944, groups of powerful nations organized the economic and political arrangements that serve us, albeit imperfectly, to this day. But rapid developments in technologies are upending established structures in every part of the economy and society.</p>
@@ -28,8 +28,11 @@
                         <p class="signature">Rohinton P. Medhora<br>
                             President, CIGI</p>
                         </div>
+                        <div class="photo-caption messages-caption">
+                            Photo of Rohinton P. Medhora
+                        </div>
                     </div>
-                    <div class="tab" data-id="tab-2" data-name="chairs-message">
+                    <div class="tab" id="chair-message" data-id="tab-2" data-name="chairs-message">
                         {% markdown template_content/slide2-chair.md %}
                         <div class="col">
                             <p>Our globalized economy has seen, in a very short amount of time, a fundamental shift away from the delivery of goods and services to international commerce based on ideas. Changing intellectual property regimes, new trade agreements and rapidly evolving technologies demand up-to-date responses from researchers and thought leaders.</p>
@@ -48,6 +51,9 @@
                             <div class="sig-image"><img src="{{ "/assets/BalsillieSignature.png" | relative_url }}" alt="signature"></div>
                             <p class="signature">Jim Balsillie<br>
                                 Chair, CIGI Board of Directors</p>
+                            </div>
+                            <div class="photo-caption messages-caption">
+                                Photo of Jim Balsillie
                             </div>
                         </div>
                     </div>
